# cargo-xfmt

./: Cargo.toml  README.md  x.bash
.github/workflows/: release.yml
src/: cargo_fmt.rs  cargo_toml.rs  main.rs  path_ext.rs  rustfmt.rs  rustfmt_stdio.rs  rustfmt_toml.rs
src/exec/: cargo_fmt.rs  mod.rs  rustfmt.rs  rustfmt_stdio.rs
src/platform/: cargo_toml.rs  mod.rs  os_string_ext.rs  path_ext.rs  rustfmt_toml.rs  vec_ext.rs
