[package]
name = "cargo-xfmt"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.49", features = ["derive"] }
normalize-path = "0.2.1"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"

[profile.release]
opt-level = 3
debug = false
lto = true
strip = "debuginfo"
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false