[package]
name = "cargo-xfmt"
version = "0.0.0-local"
edition = "2024"
authors = ["alshdavid"]
repository = "https://github.com/alshdavid/cargo-xfmt"
description = "Safely use nightly fmt options without using unstable Rust"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.49", features = ["derive"] }
normalize-path = "0.2.1"
parking_lot = "0.12.5"
toml = "0.9.8"

[profile.release]
opt-level = 3
debug = false
lto = true
strip = "debuginfo"
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
